tests/snapshots/run_wpt_conformance__onnx_split_float16_2D_tensor_number_splits_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "split.https.any.js",
    "split float16 2D tensor number splits default options",
    "onnx",
    "PASS",
)
