tests/snapshots/run_wpt_conformance__onnx_split_float16_4D_tensor_array_splits_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "split.https.any.js",
    "split float16 4D tensor array splits default options",
    "onnx",
    "PASS",
)
